<resources>
    <string name="app_name">Delving Languages</string>
    <string name="addingnewword">Adding a new word</string>
    <string name="bin">Bin</string>
    <string name="emptyingbin">Emptying bin</string>
    <string name="modifyingword">Modifying word</string>
    <string name="renaminglanguage">Renaming language</string>
    <string name="savingtest">Saving test</string>
    <string name="statistics">Statistics</string>
    <string name="test_title_3">Step 1: Delve</string>
    <string name="test_title_4">Step 2: Match</string>
    <string name="test_title_5">Step 3: Complete</string>
    <string name="test_title_6">Step 4: Write</string>
    <string name="test_title_7">Test qualification</string>
    <string name="title_add_phrasals">Adding phrasal verb</string>
    <string name="title_fonetics">Fonetics</string>
    <string name="title_list_phrasal">Phrasals\' list</string>
    <string name="title_list_selector">Select letter</string>
    <string name="title_listening">Listening</string>
    <string name="title_phrasals">Phrasal verbs</string>
    <string name="title_practising">Practising</string>
    <string name="title_removing">Removing</string>
    <string name="title_removingtest">Removing test</string>
    <string name="title_searching">Searching words</string>
    <string name="title_select_background">Select background</string>
    <string name="title_language_settings">Language settings</string>
    <string name="title_select_language">Select native language</string>
    <string name="title_test">Test</string>
    <string name="warehouse">warehouse</string>
    <string name="wordsby">Words by</string>
    <string name="title_add_idiom">Adding new language</string>
    <string name="integratinglang">Integrating</string>
    <string name="adj">ADJ</string>
    <string name="adjective">Adjective</string>
    <string name="adjectives">Adjectives</string>
    <string name="adv">ADV</string>
    <string name="adverb">Adverb</string>
    <string name="adverbs">Adverbs</string>
    <string name="all">All</string>
    <string name="attemps">Attemps:</string>
    <string name="choosecolor">Choose a color</string>
    <string name="chooseimage">Choose an image</string>
    <string name="complete">Complete</string>
    <string name="exp">EXP</string>
    <string name="expression">Expression</string>
    <string name="expressions">Expressions</string>
    <string name="failures">Failures:</string>
    <string name="match">Match</string>
    <string name="messageseparatecommas">**Separate different translations with commas.</string>
    <string name="modifier">Modifier</string>
    <string name="savechanges">Save changes</string>
    <string name="nn">NN</string>
    <string name="noun">Noun</string>
    <string name="nouns">Nouns</string>
    <string name="oth">OTH</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="ph.v">PH.V</string>
    <string name="phrasalverb">Phrasal verb</string>
    <string name="phrasalverbs">Phrasal verbs</string>
    <string name="phv">PHV</string>
    <string name="questionsavetest">Enter a name for test:</string>
    <string name="searching">. Searching</string>
    <string name="selectingbetween">Selecting between:</string>
    <string name="settings">Settings</string>
    <string name="success1">1st Success:</string>
    <string name="success2">2nd Success:</string>
    <string name="success3">3rd Success:</string>
    <string name="testssaved">Tests saved:</string>
    <string name="type">Select type:</string>
    <string name="vb">VB</string>
    <string name="verb">Verb</string>
    <string name="verbs">Verbs</string>
    <string name="wordstotest"># Words to test:</string>
    <string name="write">Write</string>
    <string name="newmatch">New match</string>
    <string name="total">Total</string>
    <string name="about_cap">ABOUT</string>
    <string name="about">About</string>
    <string name="historial">Historial</string>
    <string name="background">Background</string>
    <string name="customization">CUSTOMIZATION</string>
    <string name="doubledirection">Double direction</string>
    <string name="general">GENERAL</string>
    <string name="vibratekb">Vibrate keyboard</string>
    <string name="languagename">Language name</string>
    <string name="nativelanguage">Native Language</string>
    <string name="phrasalsenabled">Enable Phrasal Verbs</string>
    <string name="adjectsenabled">Enable Adjectives</string>
    <string name="special_chars_enabled">Enable special characters</string>
    <string name="a">A</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="addmore">Add more</string>
    <string name="addverb">Add verb</string>
    <string name="addtheme">Create new theme</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="cancel">Cancel</string>
    <string name="clearstatistics">Clear statistics</string>
    <string name="confirm">Confirm</string>
    <string name="continue_">Continue</string>
    <string name="d">D</string>
    <string name="doitagain">Do it again</string>
    <string name="e">E</string>
    <string name="emptybin">Empty bin</string>
    <string name="exit">Exit</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="goon">Go on!</string>
    <string name="gotest">Go test</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="es_n_cap">Ñ</string>
    <string name="loadfromcamera">Load from camera</string>
    <string name="loadfromsd">Load from SD</string>
    <string name="m">M</string>
    <string name="makeitup">Make it up!</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="n">N</string>
    <string name="next">Next</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="previous">Previous</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="remove">Remove</string>
    <string name="s">S</string>
    <string name="saveit">Save it</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="handle">Handle</string>
    <string name="ignore">Ignore</string>
    <string name="sv_ao">å</string>
    <string name="sv_ae">ä</string>
    <string name="sv_oe">ö</string>
    <string name="sv_ao_cap">Å</string>
    <string name="sv_ae_cap">Ä</string>
    <string name="sv_oe_cap">Ö</string>
    <string name="es_n">ñ</string>
    <string name="practise">Practise</string>
    <string name="Warehouse">Warehouse</string>
    <string name="Dictionary">Dictionary</string>
    <string name="search">Search</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="themes">Themes</string>
    <string name="addfirstlanguage">Add first language</string>
    <string name="appsettings">App Settings</string>
    <string name="changedirection">Change direction</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enterlanguage">Enter language</string>
    <string name="helps">Helps</string>
    <string name="hint_selectlanguage">Select language or type it</string>
    <string name="newword">New word</string>
    <string name="removelanguage">Remove language</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="typeanother">Type another</string>
    <string name="addlanguage">Add language</string>
    <string name="refresh">Refresh</string>
    <string name="integratelang">Integrate</string>
    <string name="enterwordin">Enter word in</string>
    <string name="entertranslationin">Enter translation in</string>
    <string name="enterpronuntiationin">Enter pronuntiation in</string>
    <string name="testremoved">Test removed</string>
    <string name="noword">Missing word</string>
    <string name="notrans">Missing translation</string>
    <string name="nopron">Missing pronunciation</string>
    <string name="notype">Missing type</string>
    <string name="noverb">Missing verb</string>
    <string name="noprep">Missing preposition</string>
    <string name="alreadyindb">already in database</string>
    <string name="trashemptied">Bin successfully emptied</string>
    <string name="nonamelang">No name entered. Changes did not save.</string>
    <string name="renamedsuccessfully">Renamed successfully</string>
    <string name="mssNoWords">There are no words to practise. Please add some.</string>
    <string name="languageloading">Language is loading</string>
    <string name="mssNoWordsToList">There are no words to list. Please add some.</string>
    <string name="mssNoTrash">Bin is empty.</string>
    <string name="msswordadded">Word added successfully</string>
    <string name="msswordmodified">Word modified successfully</string>
    <string name="imageloaded">Image loaded</string>
    <string name="notypesselected">You must select one type at least</string>
    <string name="nonametest">No name entered. Test did not save.</string>
    <string name="testsaved">Test saved</string>
    <string name="wordalreadyindb">This word is already in database</string>
    <string name="exp_integrate1">Select the language to integrate with:</string>
    <string name="exp_integrate2">Are you sure to integrate these languages? Changes can not be undone.</string>
    <string name="exp_integrate3">matches have been found</string>
    <string name="mssclearstats">Statistics has been cleared</string>
    <string name="createconjugatuionquestion">There are no data for this tense. Do you want to add tense data?</string>
    <string name="makecolor">Make your own color</string>
    <string name="_removed">removed</string>
    <string name="msgnolangname">Please, enter a name for the language</string>
    <string name="nowordmatched">No words matching your paramaters</string>
    <string name="msgbothsidesnotfilled">Both sides are not filled</string>
    <string name="msgthemecreated">Theme created</string>
    <string name="msgthememodified">Theme modified</string>
    <string name="msgnamenotspecified">Name not specified</string>
    <string name="msgnopairadded">No content added to the theme</string>
    <string name="toast_themeremoved">Theme removed</string>
    <string name="removeidiomquestion">Are you sure to remove this language?</string>
    <string name="removetestquestion">Are you sure to remove this test?</string>
    <string name="removewordquestion">Are you sure to remove this word?</string>
    <string name="clearbinquestion">Are you sure to empty the bin?</string>
    <string name="removethemequestion">Are you sure to remove this theme?</string>
    <string name="translate">Translate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_integrate_repeated">Integrate matches</string>
    <string name="hello_world">Hello world!</string>
    <string name="languageintegrated">Language integrated</string>
    <string name="title_activity_new_tense">New Tense</string>
    <string name="options">Options</string>
    <string name="actions">ACTIONS</string>
    <string name="parameters">PARAMETERS</string>
    <string name="hint_search">Type word to search</string>
    <string name="langcreated">Language created</string>
    <string name="langerased">Language erased</string>
    <string name="langintegrated">Language integrated</string>
    <string name="wordaddedtostore">Word added to store</string>
    <string name="wordadded">Word added</string>
</resources>