<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/sv_ao"
        style="@style/button_list_selector"
        android:onClick="specialKeyAction"
        android:tag="@string/sv_ao_cap"
        android:text="@string/sv_ao"
        android:visibility="gone" />

    <Button
        android:id="@+id/sv_ae"
        style="@style/button_list_selector"
        android:onClick="specialKeyAction"
        android:tag="@string/sv_ae_cap"
        android:text="@string/sv_ae"
        android:visibility="gone" />

    <Button
        android:id="@+id/sv_oe"
        style="@style/button_list_selector"
        android:onClick="specialKeyAction"
        android:tag="@string/sv_oe_cap"
        android:text="@string/sv_oe"
        android:visibility="gone" />

    <Button
        android:id="@+id/es_ene"
        style="@style/button_list_selector"
        android:onClick="specialKeyAction"
        android:tag="@string/es_n_cap"
        android:text="@string/es_n"
        android:visibility="gone" />

</LinearLayout>