<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- ************** GENERAL ************** -->

        <TextView
            style="@style/settings_indexs"
            android:text="@string/general" />

        <View style="@style/divisor" />

        <Button
            android:id="@+id/set_languagename"
            style="@style/settings_option"
            android:text="@string/languagename" />

        <TextView
            style="@style/settings_indexs"
            android:text="@string/parameters" />

        <View style="@style/divisor" />

        <CheckedTextView
            android:id="@+id/set_phrasalsenabled"
            style="@style/settings_option"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingRight="20dip"
            android:text="@string/phrasalsenabled" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <CheckedTextView
            android:id="@+id/set_adjectsenabled"
            style="@style/settings_option"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingRight="20dip"
            android:text="@string/adjectsenabled" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <CheckedTextView
            android:id="@+id/set_special_chars_enabled"
            style="@style/settings_option"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingRight="20dip"
            android:text="@string/special_chars_enabled" />

        <TextView
            style="@style/settings_indexs"
            android:text="@string/actions" />

        <View style="@style/divisor" />

        <Button
            android:id="@+id/set_integrate"
            style="@style/settings_option"
            android:text="@string/integratelang" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <Button
            android:id="@+id/set_remove"
            style="@style/settings_option"
            android:text="@string/remove" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <Button
            android:id="@+id/set_clearstats"
            style="@style/settings_option"
            android:text="@string/clearstatistics" />
    </LinearLayout>

</ScrollView>