<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <!-- ************** GENERAL ************** -->

        <TextView
            style="@style/settings_indexs"
            android:text="@string/general" />

        <View style="@style/divisor" />

        <Button
            style="@style/settings_option"
            android:onClick="changeNativeLanguage"
            android:text="@string/nativelanguage" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <CheckedTextView
            android:id="@+id/doublemode"
            style="@style/settings_option"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="double_mode_state"
            android:paddingRight="20dip"
            android:text="@string/doubledirection" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <CheckedTextView
            android:id="@+id/vibratekb_state"
            style="@style/settings_option"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="vibratekb_state"
            android:paddingRight="20dip"
            android:text="@string/vibratekb" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <Button
            style="@style/settings_option"
            android:onClick="fonetics"
            android:text="@string/title_fonetics" />

        <!-- ************** PERSONALIZACION ************** -->

        <TextView
            style="@style/settings_indexs"
            android:text="@string/customization" />

        <View style="@style/divisor" />

        <Button
            style="@style/settings_option"
            android:onClick="background"
            android:text="@string/background" />
        <!-- ************** ABOUT ************** -->

        <TextView
            style="@style/settings_indexs"
            android:text="@string/about_cap" />

        <View style="@style/divisor" />

        <Button
            style="@style/settings_option"
            android:onClick="historial"
            android:text="@string/historial" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <Button
            style="@style/settings_option"
            android:onClick="about"
            android:text="@string/about" />

        <!-- ************** RECOVERING/BACK UP ************** -->

        <TextView
            style="@style/settings_indexs"
            android:text="BACKUP / RECOVER" />

        <View style="@style/divisor" />

        <Button
            style="@style/settings_option"
            android:onClick="createBackup"
            android:text="Create backup" />

        <View
            style="@style/divisor"
            android:layout_height="0.5dip"
            android:background="#B7B7B7" />

        <Button
            style="@style/settings_option"
            android:onClick="recoverBackup"
            android:text="Recover backup" />
    </LinearLayout>

</ScrollView>