<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >

    <TextView
        android:id="@+id/lp_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF000000"
        android:textStyle="bold"
        android:text="La palabra"
         />

    <TextView
        android:text="La traduccion"
        android:id="@+id/lp_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="10dip"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF444444" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lp_noun"
            style="@style/textview_label_types_small"
            android:text="@string/nn" />

        <TextView
            android:id="@+id/lp_verb"
            style="@style/textview_label_types_small"
            android:text="@string/vb" />

        <TextView
            android:id="@+id/lp_adj"
            style="@style/textview_label_types_small"
            android:text="@string/adj" />

        <TextView
            android:id="@+id/lp_adverb"
            style="@style/textview_label_types_small"
            android:text="@string/adv" />

        <TextView
            android:id="@+id/lp_phrasal"
            style="@style/textview_label_types_small"
            android:text="@string/phv" />

        <TextView
            android:id="@+id/lp_expression"
            style="@style/textview_label_types_small"
            android:text="@string/exp" />

        <TextView
            android:id="@+id/lp_other"
            style="@style/textview_label_types_small"
            android:text="@string/oth" />
    </LinearLayout>

</LinearLayout>